--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -121,7 +121,7 @@
 			};
 
 			gf_Transaction(option, fn_callback);
-		}      
+		}
 	</script>
 	<script>
 		$(document).ready(function () {
@@ -201,10 +201,10 @@
 			enableAutoSizeColumns: true,
 			editable: false, // grid도 편집가능.. grid 편집 기능 제거 필요..
 			enableAddRow: true,
-  			asyncEditorLoading: false,
-   			autoEdit: false,
- 			autoEditNewRow: false,
- 			rowHeight: 35,
+			asyncEditorLoading: false,
+			autoEdit: false,
+			autoEditNewRow: false,
+			rowHeight: 35,
 		};
 
 
@@ -399,19 +399,19 @@
 				];
 
 				let options8 = [
-				{ value: "Assets", text: "Assets", column: "acDvCd"},
-				{ value: "Liabilities", text: "Liabilities", column: "acDvCd"},
-				{ value: "Capital", text: "Capital", column: "acDvCd"},
-				{ value: "Profit", text: "Profit", column: "acDvCd"},
-				{ value: "Loss", text: "Loss", column: "acDvCd"},
+				{ value: "Assets",		text: "Assets",			column: "acDvCd"},
+				{ value: "Liabilities",	text: "Liabilities",	column: "acDvCd"},
+				{ value: "Capital",		text: "Capital",		column: "acDvCd"},
+				{ value: "Profit",		text: "Profit",			column: "acDvCd"},
+				{ value: "Loss",		text: "Loss",			column: "acDvCd"},
 				];
 
 				let options9 = [
-				{ value: "1", text: "AssetsSum", column: "acKindCd"},
-				{ value: "2", text: "LiabilitiesSum", column: "acKindCd"},
-				{ value: "3", text: "CapitalSum", column: "acKindCd"},
-				{ value: "4", text: "ProfitSum", column: "acKindCd"},
-				{ value: "5", text: "LossSum", column: "acKindCd"}
+				{ value: "AssetsSum",		text: "AssetsSum",		column: "acKindCd"},
+				{ value: "LiabilitiesSum",	text: "LiabilitiesSum",	column: "acKindCd"},
+				{ value: "CapitalSum",		text: "CapitalSum",		column: "acKindCd"},
+				{ value: "ProfitSum",		text: "ProfitSum",		column: "acKindCd"},
+				{ value: "LossSum",			text: "LossSum",		column: "acKindCd"}
 				];
 
 			grid.render();
