그리드, 정렬, 버튼명 등

--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -401,7 +401,7 @@
 				let options8 = [
 				{ value: "Assets",		text: "Assets",			column: "acDvCd"},
 				{ value: "Liabilities",	text: "Liabilities",	column: "acDvCd"},
-				{ value: "Capital",		text: "Capital",		column: "acDvCd"},
+				{ value: "Capitals",	text: "Capitals",		column: "acDvCd"},
 				{ value: "Profit",		text: "Profit",			column: "acDvCd"},
 				{ value: "Loss",		text: "Loss",			column: "acDvCd"},
 				];
