--- a/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
@@ -174,7 +174,7 @@
 			{ id: "batLoadStatCd",	name: "Run Status",				field: "batLoadStatCd",	width: 100,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{ id: "mainEmpNo",		name: "Main User",				field: "mainEmpNo",		width: 100,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{ id: "frstRegEmpNo",	name: "Executor",				field: "frstRegEmpNo",	width: 100,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
-			{ id: "frstRegDtm",		name: "Execution Date",			field: "frstRegDtm",	width: 150,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
+			{ id: "frstRegDtm",		name: "Execution Date",			field: "frstRegDtm",	width: 150,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center", hidden:true },
 		];
 	
 		var options = {
