--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -300,7 +300,7 @@
 			asyncEditorLoading: false,
 			autoEdit: false,
 			autoEditNewRow: false,
-			enableAutoSizeColumns: true,
+			//enableAutoSizeColumns: true,
 			rowHeight: 35,
 		};
 	
